# django-2-MukagaliSDU

./: db.sqlite3  pyproject.toml
homework/: settings.py  urls.py
news/: admin.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_rename_comment_news.py  0003_alter_news_created_at_comments.py  0004_alter_comments_created_at_alter_news_created_at.py
news/templates/news/: add_news.html  detail.html  index.html
