[tool.poetry]
name = "django-2-mukagalisdu"
version = "0.1.0"
description = ""
authors = ["Mukagali <mukgaly.omirzak2003@gmail.com>"]
readme = "README.md"
packages = [{include = "django_2_mukagalisdu"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
d = "^0.2.2"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
